objects/CRMforNonProfit__CRMforNonProfit_TransactionLineItem__c.object
<CustomObject>
    <description>To hold products from eshop</description>
    <fields>
        <fullName>CRMforNonProfit__Price__c</fullName>
        <description>Price from eshop Order</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Product2Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product2Lookup</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>CRMforNonProfit_TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Quantity__c</fullName>
        <description>Quantity from eshop Order</description>
        <inlineHelpText>Quantity from eshop Order</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__TransactionLookup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>TransactionLookup</label>
        <referenceTo>CRMforNonProfit__Transaction__c</referenceTo>
        <relationshipName>CRMforNonProfit_TransactionLineItems</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>TransactionLineItem</label>
    <nameField>
        <label>CRMforNonProfit__TransactionLineItem Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TransactionLineItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>